--- a/BUILD.gn
+++ b/BUILD.gn
@@ -314,6 +314,22 @@ opts("avx") {
   }
 }
 
+opts("hsw") {
+  enabled = is_x86
+  sources = skia_opts.hsw_sources
+  if (is_win) {
+    cflags = [ "/arch:AVX2" ]
+  } else {
+    cflags = [
+      "-mavx2",
+      "-mbmi",
+      "-mbmi2",
+      "-mf16c",
+      "-mfma",
+    ]
+  }
+}
+
 # Any feature of Skia that requires third-party code should be optional and use this template.
 template("optional") {
   if (invoker.enabled) {
@@ -775,6 +791,7 @@ component("skia") {
     ":fontmgr_fuchsia",
     ":gpu",
     ":heif",
+    ":hsw",
     ":jpeg",
     ":none",
     ":pdf",
